	* Added overloads to the compiler methods to avoid having to pass a shader entry point.
	* Changed the ShaderBytecode.Compile methods to use D3DCompiler instead of D3DX.
	* Added a missing enum from ShaderFlags.
	* Changed the ShaderBytecode.CompileFromFile methods to read the file manually and use D3DCompiler. This should solve the Unicode issue as well.

Direct3D 9
	* Changed the shared handle parameter for texture creation to be a ref parameter.
	* Changed Texture shared handle parameter from out to ref.
	* Fixed 9Ex methods that didn't properly initialize display mode parameters.
	* Added special casing for Effect.GetValue with boolean results.
	* Fixed a null reference issue in D3DX.OptimizeFaces and OptimizeVertices.
	* Changed Device.AvailableTextureMemory to return an Int64 instead of Int32.
	* Fixed Device.Set*ShaderConstant* overloads that implicitly calculate the number of items to pass.
	* Vertex declarations no longer require VertexElementEnd at the end of the input array.
	* Added RegisterSoftwareDevice to support software renderers.
	
Direct3D 10
	* Dropped stream size checks in texture ToStream functions.
	* Added a constructor to InputLayout to take shader bytecode.
	* Added Texture2D.ComputeNormalMap.
	* Added ShaderResourceView.FromMemory and ShaderResourceView.FromStream.
	* Added Resource.LoadTextureFromTexture and Resource.FilterTexture.
	* Added Resource.AsSurface to retrieve a DXGI Surface from a resource.
	* Added missing WARP device type.
	* Fixed shader compilation to allow null entry points.
	* Fixed ShaderSignature Get*Signature methods.
	* Added overloads to EffectVectorVariable.Set to take color inputs.
	
Direct3D 11
	* Dropped stream size checks in texture ToStream functions.
	* Added a constructor to InputLayout to take shader bytecode.
	* Added shader reflection API.
	* Added Texture2D.ComputeNormalMap.
	* Added ShaderResourceView.FromFile, ShaderResourceView.FromMemory and ShaderResourceView.FromStream.